refactor: upgraded swagger docs
